多语言支持与符号链接自定义功能增强
新增英文/中文多语言，支持运行时切换；主窗口增加语言选择栏，所有控件文字和消息提示均可即时刷新。新增自定义符号链接名称、自定义图标（desktop.ini）、固定到快速访问功能，核心逻辑在 SymlinkAgent。AboutWindow 也支持多语言。项目结构调整，新增 i18n 文件夹和资源嵌入，增加 Architecture.md 设计文档和 release.yml 自动发布脚本。版本号升级为 1.3.1，UI/代码细节优化。

--- a/SymlinkCreator/SymlinkCreator.csproj
+++ b/SymlinkCreator/SymlinkCreator.csproj
@@ -226,6 +226,7 @@
     <Compile Include="core\ApplicationConfiguration.cs" />
     <Compile Include="core\ScriptExecutor.cs" />
     <Compile Include="core\SymlinkAgent.cs" />
+    <Compile Include="i18n\LocalizationManager.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="ui\aboutWindow\AboutWindow.xaml.cs">
       <DependentUpon>AboutWindow.xaml</DependentUpon>
@@ -248,6 +249,13 @@
     <None Include="App.config" />
     <None Include="app.manifest" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="i18n\Strings.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Strings.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="i18n\Strings.zh-CN.resx" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="resources\icons\MainIcon.ico" />
